refactor: 주문-결제 모듈 분리